--- a/new_index.html
+++ b/new_index.html
@@ -9,19 +9,19 @@
     <link rel="stylesheet" href="https//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300|Raleway:300,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="newstyle.css">
   </head>
 
   <body>
     <!--Header-->
     <header>
-        <div class="logo">
-            <img src="Logo.png" alt="" >
-        </div>
+        
         <nav class="nav">
             <ul class="nav_list">
               <li class="nav_items"><a href="#aboutme" class="nav_link">About me</a></li>
               <li class="nav_items"><a href="#experience" class="nav_link">Experience</a></li>
+                <img class="logo" src="Logo.png" alt="logo">
+     
               <li class="nav_items"><a href="#projects" class="nav_link">Projects</a></li>
               <li class="nav_items"><a href="#socials" class="nav_link">Socials</a></li>
             </ul>
