--- a/new_index.html
+++ b/new_index.html
@@ -16,12 +16,16 @@
     <!--Header-->
     <header>
         <nav class="nav">
-            <ul class="nav_list">
-              <li class="nav_items"><a href="#aboutme" class="nav_link">About me</a></li>
-              <li class="nav_items"><a href="#experience" class="nav_link">Experience</a></li>
+            <ul class="nav-left">
+                <li class="nav_items"><a href="#aboutme" class="nav_link">About me</a></li>
+                <li class="nav_items"><a href="#experience" class="nav_link">Experience</a></li>
 
-              <li class="nav_logo"><img class="logo" src="Logo.png" alt="logo"></li>
-              
+            </ul>
+            <div class="nav-center">
+                <img class="logo" src="Logo.png" alt="logo">
+            </div>
+
+            <ul class="nav-right">
               <li class="nav_items"><a href="#projects" class="nav_link">Projects</a></li>
               <li class="nav_items"><a href="#socials" class="nav_link">Socials</a></li>
             </ul>
