--- a/new/index.html
+++ b/new/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!--default html stuffsies-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,27 +9,27 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300|Raleway:300,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="newstyle.css">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300|Raleway:300,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
 
-  <body>
+<body>
     <!--Header-->
     <header>
         <nav class="nav">
             <ul class="nav-left">
                 <li class="nav_items"><a href="#aboutme" class="nav_link">About me</a></li>
                 <li class="nav_items"><a href="#experience" class="nav_link">Experience</a></li>
-
             </ul>
             <div class="nav-center">
-                <img class="logo" src="Logo.png" alt="logo">
+                <img class="logo" src="/assets/images/Logo.png" alt="logo">
             </div>
 
             <ul class="nav-right">
-              <li class="nav_items"><a href="#projects" class="nav_link">Projects</a></li>
-              <li class="nav_items"><a href="#socials" class="nav_link">Socials</a></li>
+                <li class="nav_items"><a href="#projects" class="nav_link">Projects</a></li>
+                <li class="nav_items"><a href="#socials" class="nav_link">Socials</a></li>
             </ul>
         </nav>
     </header>
-  </body>
+</body>
