new website finished

--- a/new/index.html
+++ b/new/index.html
@@ -60,7 +60,7 @@ Grafisch Lyceum in Utrecht.<br><br>
 I did internships at SyncVR and<br>
 the Ministry of Defense respectively! <br><br>
 
-The internship at Defense thought me alot<br>
+The internship at Defense taught me alot<br>
 and I even got offered a job.<br>
 
 
@@ -111,11 +111,19 @@ and I even got offered a job.<br>
         <div class="projects-subtext">and of course the ones I already talked about...</div>
         <div class="hr2"></div>
     <div class="project-box-container">
-        <div class="defense-text-container"><b>Defense App</b></div>
-        <div class="kapper-text-container"><b>Kappers App</b></div>
-        <div class="portfolio-text-container"><b>Portfolio Website</b></div>
+        <div class="defense-text-container"><b>Defense App</b>
+            <div class="box-text-defense">Hover over me!</div>
+        </div>
+        <div class="kapper-text-container"><b>Kappers App</b>
+            <div class="box-text-kapper">Hover over me!</div>
+        </div>
+        <div class="portfolio-text-container"><b>Portfolio Website</b>
+            <div class="box-text-portfolio">Hover over me!</div>
+        </div>
     </div>
-    <div class="city-builder-text-container"><b>City Builder</b></div>
+    <div class="city-builder-text-container"><b>City Builder</b>
+        <div class="box-text-city">Hover over me!</div>
+    </div>
     
 <div class="hr2"></div>
 </div>
@@ -125,14 +133,18 @@ and I even got offered a job.<br>
         <div class="socials-subtext">If so, here are some of my socials</div>   
     </div>
     <div class="socials-text-container">
-        
     </div>
+    <div class="socials-subtext"><b>Send me an E-mail!</div>
+    <div class="hr2"></div>
+
+    <div class="socials-subtext">Thank you for taking the time, to check out my portfolio!</div>
+    <div class="socials-name-text">G. van der Linden</div>
 
 
 </div>
 
 <div class="footer" style="color:#fff;">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ipsam modi alias maxime voluptatibus eos blanditiis, ex commodi magni mollitia beatae accusantium iure sit, delectus cumque dolorum velit eligendi rem autem quod odit itaque quibusdam. Sapiente tempora mollitia temporibus assumenda atque consequatur facere vero, quidem ipsa dolorem natus consectetur rem, perspiciatis dolor ducimus provident, accusamus aliquam sed eligendi magnam illo labore. Eum aperiam id, optio animi quo quis repellat obcaecati ratione magni magnam beatae officiis, eius ex ea laborum iste! Sit voluptatibus, saepe eum animi eveniet, illum vero optio possimus itaque recusandae porro officia laudantium atque fugiat cum doloribus perferendis voluptatum, accusamus totam. Corporis aperiam itaque mollitia veniam velit possimus inventore nulla autem quasi. Illum quo, eaque facilis voluptas sed qui veniam accusantium, molestiae molestias magnam labore earum rem reprehenderit ipsum deserunt eos repellat consequatur, dignissimos architecto aperiam. Fugit, ratione? Aspernatur ratione dolorem facilis quisquam. Enim qui tempore vel ipsum architecto inventore perspiciatis. Officiis dolorum laudantium ab repellendus sed ipsum repudiandae, delectus eaque corporis animi voluptatem ea quia provident molestias dolor laborum, perferendis sit ut exercitationem. Quis nemo, cumque molestiae quae cupiditate placeat excepturi, ducimus ipsum a iure quam amet numquam soluta est magni. Autem nisi quis cumque exercitationem at necessitatibus voluptates est, vero impedit obcaecati sequi distinctio quos animi maxime totam laboriosam? Consequuntur ratione tempore officia soluta quia libero debitis deleniti magnam. Pariatur facere incidunt, fugit ullam vero laboriosam voluptatem enim quo consectetur temporibus quod suscipit sequi! Cumque harum doloremque, quibusdam necessitatibus aliquam quasi praesentium error voluptatum libero? Iure perspiciatis natus debitis incidunt unde id officia cum, blanditiis reprehenderit sapiente, dolor adipisci rerum autem fugiat molestias a distinctio odit voluptate! Est nemo repellendus, corrupti voluptas facere corporis quo veritatis, tempore ratione suscipit laboriosam repudiandae numquam sit mollitia enim nobis earum molestiae reprehenderit voluptatibus fuga laborum ipsum beatae reiciendis impedit. Inventore cum deserunt illum numquam dolores magnam dolorum nisi quibusdam nobis ipsa molestias, qui similique soluta quidem provident suscipit totam beatae harum ut architecto eligendi, eos esse enim laborum? Officiis eos quam neque accusamus eveniet inventore exercitationem, distinctio at eum incidunt, saepe itaque quis obcaecati natus placeat voluptas et esse odit! Id dolore explicabo nulla ratione sed. Ratione cupiditate blanditiis, quaerat iure nam porro veniam, accusantium facilis obcaecati vitae modi dicta dolore corrupti reiciendis eveniet nihil totam architecto officiis voluptates, ducimus doloribus? Fuga, autem quasi? Voluptas porro perferendis error illum explicabo, maiores a necessitatibus deleniti totam minus molestiae voluptate velit unde asperiores dicta ab laborum enim deserunt suscipit sit iusto culpa! Aut iusto at dolore, dolor quasi, commodi voluptatibus, vero exercitationem modi magni officiis? Tempore delectus distinctio exercitationem est aliquam placeat labore aut eaque odit, cupiditate, dolorum qui blanditiis! Quo nostrum sed delectus beatae! Placeat repudiandae quidem recusandae architecto quam totam inventore commodi atque itaque assumenda quod repellat cum provident consequuntur impedit tempore ex esse consequatur, harum rerum aspernatur accusantium hic nostrum. Minus quod, quia vitae totam ut explicabo ab dolorum ipsam eaque, neque voluptatibus ullam aliquid atque id libero. Necessitatibus tempore exercitationem omnis numquam harum inventore, porro tenetur amet similique magni odio vel beatae, doloribus sequi possimus aperiam quia illum architecto dignissimos impedit repellendus deserunt ut animi maxime. Soluta praesentium reprehenderit similique cumque ut quis dolorum. Fugit necessitatibus velit, unde quo est, quibusdam quia assumenda, voluptate a perspiciatis illum delectus dolorem deleniti quaerat? Expedita quasi porro aliquid rerum minima alias consequatur voluptatem non laborum quos, nulla placeat cumque harum, sit modi corrupti suscipit amet nobis perspiciatis voluptates temporibus veniam aliquam obcaecati. Quam totam voluptates quae eaque porro. Eaque repudiandae corrupti quidem blanditiis fuga saepe ab eum, animi facere excepturi repellat quam illum. Quod eos natus quaerat doloremque quasi odit earum eligendi, illo neque sapiente praesentium totam pariatur repudiandae officiis quo veritatis. Facilis ex ipsum quis optio nihil! Perspiciatis exercitationem officiis voluptatibus alias fugiat enim id repudiandae suscipit non quidem repellat impedit voluptatum, iure aliquam veniam, repellendus doloremque qui! Magnam autem consequuntur dolorem possimus in officiis cupiditate voluptas! Delectus officia dolorum voluptates molestias eius in ipsum, natus similique quo impedit aut qui velit ducimus sunt dolorem sint, ullam atque error possimus quos. Soluta inventore incidunt, est dignissimos consequuntur, asperiores laboriosam consectetur ipsum explicabo id eligendi labore dolorum doloremque, maiores quasi. Dicta, nihil? Veritatis dolore minima placeat corrupti rem hic alias, illo tempora nemo reiciendis at consequuntur earum commodi, aspernatur deserunt eaque architecto ipsum aut. Optio vitae quidem ipsam sed illo nesciunt sapiente, ex facilis in deserunt blanditiis, vero, aliquid pariatur! Consequuntur, blanditiis molestias? Possimus praesentium eaque aspernatur mollitia non ex impedit. Reprehenderit asperiores ad sint voluptatem officiis natus impedit eum autem voluptatum fuga provident dolorem, tempore eos qui amet maiores! Delectus eveniet ab quia esse, reprehenderit aspernatur voluptatibus praesentium impedit ipsa? Quod cupiditate nihil maiores, at dolorum fugiat libero vero atque consectetur autem maxime id nam repellat laudantium perspiciatis necessitatibus cum officia similique reprehenderit doloribus ducimus sapiente, enim error quam! Quidem ipsum ab fugiat omnis aspernatur aliquam itaque vero deleniti, earum, eveniet autem delectus quod porro? Quas minima aliquid, praesentium est consequatur culpa placeat error porro incidunt quae, atque enim consequuntur nesciunt maxime ab sint architecto reprehenderit cumque veniam eaque nulla quo. Quam molestiae perferendis perspiciatis maxime doloremque vero eligendi inventore eum eaque ipsa ea deleniti quaerat aliquid, sapiente ut architecto tenetur est reiciendis labore, eveniet fugiat! Saepe suscipit itaque quod non laboriosam voluptas, nisi sit eos officia dolorum consequatur cum inventore ratione! Accusantium fugiat, magnam animi vitae, doloribus esse et voluptatibus natus voluptatem unde quos! Ipsa, est facilis cum ullam odit facere libero ab quas pariatur minus impedit iste tempora labore recusandae officia natus! Sunt dignissimos, sed rerum ipsam sapiente quaerat quasi, consequuntur atque sequi voluptas assumenda commodi aliquid harum voluptatem minima iure consequatur fuga aliquam nulla cupiditate doloribus quam delectus. Odio totam neque facere hic numquam. Quae placeat laboriosam culpa sint ullam excepturi quibusdam consequuntur accusamus pariatur enim! Ex voluptas deleniti saepe quam eveniet et laborum accusamus alias pariatur voluptate molestias recusandae sapiente ratione, itaque dolor quaerat omnis. Quidem nesciunt in assumenda! Nam maxime ad placeat veritatis debitis, in dolorum molestiae, recusandae incidunt natus quos exercitationem laboriosam? Odit!
+   <div class="text">DIT IS ONTZICHTBARE TEXT OM MIJN WEBSITE TE EXTENDEN.DIT IS ONTZICHTBARE TEXT OM MIJN WEBSITE TE EXTENDEN.DIT IS ONTZICHTBARE TEXT OM MIJN WEBSITE TE EXTENDEN.DIT IS ONTZICHTBARE TEXT OM MIJN WEBSITE TE EXTENDEN.DIT IS ONTZICHTBARE TEXT OM MIJN WEBSITE TE EXTENDEN.DIT IS ONTZICHTBARE TEXT OM MIJN WEBSITE TE EXTENDEN.</div>
 </div>
 
 <!-- <div class="text-container">
